[package]
name = "const-assoc-derive"
version = "0.1.0"
edition = "2021"
authors = ["Yegor Vaskonyan <yegor.vaskonyan@gmail.com>"]
description = "Derive macros for const-assoc crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.96"
quote = "1.0.38"
anyhow = "1.0.95"
proc-macro2 = "1.0.93"