[package]
name = "const-assoc"
version = "0.1.0"
edition = "2021"
authors = ["Yegor Vaskonyan <yegor.vaskonyan@gmail.com>"]
description = "A const-capable Map type backed by a static array"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yegorvk/const_array_map"
readme = "../README.md"
keywords = ["no_std", "no-std", "map", "enum", "structure"]
categories = ["data-structures", "embedded", "no-std"]

[dependencies]
const-assoc-derive = { version = "0.1.0", path = "../const-assoc-derive" }
const-default = "1.0.0"
typewit = "1.11.0"
derive-where = "1.2.7"
sealed = "0.6.0"
