[package]
name = "const_array_map"
version = "0.1.1"
edition = "2021"
authors = ["Yegor Vaskonyan <yegor.vaskonyan@gmail.com>"]
description = "A const-capable Map type backed by a static array"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yegorvk/const_array_map"
readme = "../README.md"
keywords = ["no_std", "no-std", "map", "enum", "structure"]
categories = ["data-structures", "embedded", "no-std"]

[dependencies]
const_array_map_derive = { version = "0.1.1", path = "../const_array_map_derive" }
const-default = "1.0.0"
typewit = "1.11.0"
derive-where = "1.2.7"
sealed = "0.6.0"
